Refactor post handling and update templates to use PostDTO for data representation

--- a/app/static/templates/wall.jinja2
+++ b/app/static/templates/wall.jinja2
@@ -120,7 +120,7 @@
                 <div class="post">
                     <div class="post-header">
                         <span>{{ post.author_username }}</span>
-                        <span>{{ post.created_at.strftime('%d %b %Y %H:%M') }}</span>
+                        <span>{{ post.created_at }}</span>
                     </div>
                     <div class="post-content">{{ post.text }}</div>
                 </div>
