--- a/app/static/templates/_post_block.jinja2
+++ b/app/static/templates/_post_block.jinja2
@@ -1,6 +1,17 @@
-<div class="post">
-    {{ post.text | e | nl2br }}
-    <div class="meta">
-        Posted by {{ post.author_id }} at {{ post.created_at.strftime("%Y-%m-%d %H:%M") }}
+<div class="posts" id="postsContainer">
+    {% for post in posts %}
+    <div class="post" data-id="{{ post.id }}">
+        <div class="post-header">
+            <span class="author">{{ post.author_username }}</span>
+            {% if post.author_id == current_user_id %}
+            <span class="actions">
+                <button class="icon-btn edit-btn" title="Edit">Edit</button>
+                <button class="icon-btn delete-btn" title="Delete">Delete</button>
+            </span>
+            {% endif %}
+        </div>
+        <div class="post-content field">{{ post.text|safe }}</div>
+        <div class="post-footer"><span class="date">{{ post.created_at }}</span></div>
     </div>
+    {% endfor %}
 </div>
