--- a/app/static/styles/layout.css
+++ b/app/static/styles/layout.css
@@ -1,26 +1,6 @@
-/* Шапка */
-.site-header {
-    width: 100vw;
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 12px 20px;
-    background: var(--surface-bg);
-    border-bottom: 1px solid #374151;
-    z-index: 1000;
-}
-
-.site-header .username {
-    font-size: 15px;
-    font-weight: 500;
-    color: var(--text-color);
-}
-
+/* Основной контейнер */
 main {
-    padding: 40px 20px 30px 20px;
+    width: 100%;
 }
 
 /* Заголовки */
@@ -31,38 +11,18 @@ h1 {
     margin-bottom: 20px;
 }
 
-/* Футер */
-.footer {
+.card {
+    margin-top: 150px;
+    margin-bottom: 50px;
+    align-items: center;
+    border: 2px solid var(--accent);
+    border-radius: 20px;
+    padding: 20px;
+}
+
+.card-footer {
     margin-top: 20px;
     font-size: 13px;
     text-align: center;
     color: var(--muted-color);
-}
-
-.footer a {
-    color: var(--accent);
-    text-decoration: none;
-}
-
-.footer a:hover {
-    text-decoration: underline;
-}
-
-/* Адаптив */
-@media (max-width: 768px) {
-    body {
-        padding: 10px;
-        padding-top: 60px;
-    }
-    .site-header {
-        flex-direction: column;
-        align-items: stretch;
-        padding: 10px 16px;
-    }
-    .site-header button {
-        margin-top: 10px;
-    }
-    .posts {
-        width: 100%;
-    }
 }
