--- a/app/static/templates/_post_block.jinja2
+++ b/app/static/templates/_post_block.jinja2
@@ -2,15 +2,25 @@
     {% for post in posts %}
     <div class="post" data-id="{{ post.id }}">
         <div class="post-header">
-            <span class="author">{{ post.author_username }}</span>
+            {# Блок автора #}
+            <div class="post-author-block">
+                <img class="post-author-avatar" src="{{ post.author_avatar or '/static/images/default-avatar.png' }}">
+                <span class="post-author-username">{{ post.author_username }}</span>
+            </div>
+
+            {# Кнопки редактирования и удаления #}
             {% if post.author_id == current_user_id %}
             <span class="actions">
-                <button class="icon-btn edit-btn" title="Edit">Edit</button>
-                <button class="icon-btn delete-btn" title="Delete">Delete</button>
+                <button class="post-btn post-edit-btn" title="Edit">Edit</button>
+                <button class="post-btn post-delete-btn" title="Delete">Delete</button>
             </span>
             {% endif %}
         </div>
+
+        {# Текст поста #}
         <div class="post-content field">{{ post.text|safe }}</div>
+
+        {# Дата публикации #}
         <div class="post-footer"><span class="date">{{ post.created_at }}</span></div>
     </div>
     {% endfor %}
